# pathfinder_visualizer

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/maze/: draw.rs  maze.rs  mazegenerator.rs  mod.rs
backend/src/server/: websocket.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/misc/: Navbar.js
frontend/src/pathfinder/: displayMaze.js  maze.css
frontend/src/pathfinder/components/: dfsButton.js  stopButton.js
frontend/src/services/: axios.js
frontend/src/welcome-page/: welcome.js
frontend/src/welcome-page/components/: GetStartedButton.js  button.css
